autocomplete basics implemented

--- a/hw8/stocks/package.json
+++ b/hw8/stocks/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@akanass/rx-http-request": "^3.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "rxjs": "^6.6.3"
   }
 }
