--- a/hw8/stocks/angular-app/package.json
+++ b/hw8/stocks/angular-app/package.json
@@ -29,6 +29,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
+    "highcharts": "^8.2.2",
+    "highcharts-angular": "^2.8.2",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
