--- a/Stocks/app/src/main/AndroidManifest.xml
+++ b/Stocks/app/src/main/AndroidManifest.xml
@@ -11,6 +11,14 @@
         android:theme="@style/Theme.Stocks">
         <activity android:name=".MainActivity" android:theme="@style/Theme.Stocks"/>
 
+        <activity android:name=".SearchableActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
+
         <activity android:name=".SplashScreenActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
