--- a/Stocks/app/src/main/AndroidManifest.xml
+++ b/Stocks/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>.Time for Splash Screen:
+        </activity>
     </application>
 
 </manifest>
