swipe to delete implemented

--- a/Stocks/app/build.gradle
+++ b/Stocks/app/build.gradle
@@ -36,10 +36,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-// builds
-//    implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:3.2.0'
 
-    //does not
+//    implementation 'com.android.support:design:28.0.0-rc01' find androidx equivalent
     implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:3.2.0'
 
     testImplementation 'junit:junit:4.+'
